Renamed BookWrapperResponse to BookV2Wrapper to make more sense. Changed in BookControllerV1 and V2